Initial commit of 25Eloquence-Finalisation project

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ WHISPER_STT_URL=http://192.168.1.44:8001
 LIVEKIT_URL=ws://192.168.1.44:7888
 LIVEKIT_API_KEY=devkey
 LIVEKIT_API_SECRET=secret
+CACHE_BREAKER=20240617_01
