--- a/livekit_agent/.env
+++ b/livekit_agent/.env
@@ -1,5 +1,5 @@
 # LiveKit Configuration
-LIVEKIT_URL=ws://192.168.1.44:7888
+LIVEKIT_URL=ws://livekit:7880
 LIVEKIT_API_KEY=devkey
 LIVEKIT_API_SECRET=devsecret123456789abcdef0123456789abcdef0123456789abcdef
 
