--- a/livekit.yaml
+++ b/livekit.yaml
@@ -1,20 +1,7 @@
 port: 7880
-bind_addresses:
-  - ""
 rtc:
   tcp_port: 7881
   port_range_start: 50000
   port_range_end: 60000
-  use_external_ip: true
-redis:
-  address: ""
-turn:
-  enabled: false
 keys:
-  devkey: devsecret123456789abcdef0123456789abcdef0123456789abcdef
-room:
-  auto_create: true
-  enable_recording: false
-logging:
-  level: info
-  pion_level: warn
+  devkey: "devsecret123456789abcdef0123456789abcdef0123456789abcdef"
