Initial commit for backup to eloquence-privacy

--- a/backend/.env
+++ b/backend/.env
@@ -54,11 +54,11 @@ SUPABASE_DB_PASSWORD=sissoko13011985
 SUPABASE_REGION=eu-west-3
 
 # LiveKit Configuration
-LIVEKIT_URL=ws://localhost:7881
+LIVEKIT_URL=ws://livekit:7880
 LIVEKIT_API_KEY=devkey
 # Piper TTS Configuration
 TTS_ENGINE=piper
 TTS_VOICE=alloy
 TTS_RESPONSE_FORMAT=wav
 PIPER_TTS_URL=http://localhost:8020/v1/audio/speech
-LIVEKIT_API_SECRET=devsecret123456789abcdef0123456789abcdef0123456789abcdef
+LIVEKIT_API_SECRET=devsecret123456789abcdef0123456789abcdef
