--- a/livekit_agent/.env
+++ b/livekit_agent/.env
@@ -8,9 +8,9 @@ MISTRAL_API_KEY=fc23b118-a243-4e29-9d28-6c6106c997a4
 MISTRAL_BASE_URL=https://api.scaleway.ai/18f6cc9d-07fc-49c3-a142-67be9b59ac63/v1/chat/completions
 MISTRAL_MODEL=mistral-nemo-instruct-2407
 
-# Services locaux
-PIPER_TTS_URL=http://192.168.1.44:5002
-WHISPER_STT_URL=http://192.168.1.44:8001
+# Services locaux (CORRIGÉ: utilisation des noms de services Docker)
+PIPER_TTS_URL=http://tts-service:5002
+WHISPER_STT_URL=http://asr-service:8001
 
 # Configuration de l'agent
 AGENT_NAME=Coach Entretien IA
@@ -18,3 +18,4 @@ AGENT_LANGUAGE=fr
 
 # OpenAI API Key (si nécessaire pour certains agents)
 OPENAI_API_KEY=sk-proj-test-key-replace-with-real-key
+ROOM_NAME=session_demo-1_1750192454
