--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,9 @@
-fastapi>=0.104.0
-uvicorn>=0.24.0
-python-multipart>=0.0.6
-aiofiles>=23.2.1
-pydantic>=2.5.0
+flask>=2.3.0
+flask-cors>=4.0.0
+celery>=5.3.0
+redis>=4.6.0
+pyjwt>=2.8.0
+httpx>=0.25.0
+gunicorn>=21.2.0
+waitress>=2.1.0
+livekit-api
