--- a/livekit-fixed.yaml
+++ b/livekit-fixed.yaml
@@ -4,13 +4,14 @@ rtc:
   tcp_port: 7881
   port_range_start: 50000
   port_range_end: 60000
-  # Désactivation explicite de STUN pour tests locaux
-  stun_servers: []
-  use_external_ip: false
+  # Configuration des serveurs STUN
+  stun_servers:
+    - "stun:stun.l.google.com:19302"
+    - "stun:stun1.l.google.com:19302"
 
 # Configuration des clés API
 keys:
-  devkey: "devsecret123456789abcdef0123456789abcdef"
+  devkey: "devsecret"
 
 # Configuration des logs
 logging:
